# stripper

./: Cargo.toml  README.md
examples/: loop_test.rs
examples/express/: Cargo.toml  memory.x
examples/express/src/: main.rs
examples/patterns/: Cargo.toml
examples/patterns/src/: gradient.rs  lib.rs  weather.rs
examples/wasm/: Cargo.toml  index.html
examples/wasm/src/: gradient.rs  lib.rs  weather.rs
examples/weather/: Cargo.toml  index.html
examples/weather/src/: lib.rs  weather.rs
src/: lib.rs  scene.rs
src/effects/: looper.rs  mod.rs  plain.rs  pulse.rs
src/primitives/: color.rs  image.rs  looper.rs  mod.rs  transition.rs  tween.rs
src/runtime/: common.rs  express.rs  mod.rs  pico.rs  wasm.rs
