[package]
name = "stripper"
version = "0.1.0"
edition = "2021"

[features]
pico = ["dep:smart-leds"]
wasm = ["dep:web-sys", "dep:wasm-bindgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-leds = { version = "0.3.0", optional = true }

wasm-bindgen = { version="0.2.74", optional = true }

# primitives
palette = { version="0.7.1", features=["named", "named_from_str", "approx", "libm"]}
kmeans_colors = { version="0.5.0", features=["palette_color"] }
easer = { version="0.3.0", features=["libm"] }
rand = { version="0.8.5", features=["small_rng"] }
wasm-timer = "0.2.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'CssStyleDeclaration',
  'console'
]
optional = true

[workspace]
members = [
  "examples/weather"
]
