[package]
name = "stripper"
version = "0.1.0"
edition = "2021"

[features]
pico = ["dep:smart-leds", "dep:embassy-rp"]
wasm = ["dep:web-sys", "dep:wasm-bindgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-leds = { version = "0.3.0", optional=true }
embassy-rp = {git="https://github.com/embassy-rs/embassy.git", features = ["unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"], optional=true}
pio-proc = "0.2"
pio = "0.2.1"

wasm-bindgen = { version="0.2.74", optional = true }

# primitives
palette = { version="0.7.1", features=["named", "named_from_str", "approx", "libm"]}
easer = { version="0.3.0", features=["libm"] }
fixed-macro = "1.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'CssStyleDeclaration',
  'console'
]
optional = true

[workspace]
members = [
  "examples/wasm"
]
