[package]
name = "stripper"
version = "0.1.0"
edition = "2021"

[features]
pico = ["dep:embassy-rp", "dep:pio", "dep:pio-proc"]
wasm = ["dep:web-sys", "dep:wasm-bindgen"]
express = ["dep:atsamd21g", "dep:circuit_playground_express", "dep:smart-leds", "dep:ws2812-timer-delay"]

[dependencies]
# Pico
embassy-rp = {git="https://github.com/embassy-rs/embassy.git", features = ["unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"], optional=true}
pio-proc = {version="0.2", optional=true}
pio = {version="0.2.1", optional=true}

# Wasm
wasm-bindgen = { version="0.2.74", optional = true }

# Express
atsamd21g = {version="0.11.0", optional=true}
circuit_playground_express = {version="0.11.0", optional=true}
smart-leds = {version="0.3.0", optional=true}
ws2812-timer-delay = { features = ["slow"], version = "0.3.0", optional=true }

# primitives
palette = { version="0.7.1", features=["libm"], default-features=false }

fixed-macro = "1.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'CssStyleDeclaration',
  'console'
]
optional = true

[workspace]
members = [
  "examples/wasm",
  "examples/express",
  "examples/patterns"
]
