[package]
name = "express"
version = "0.1.0"
authors = ["Evan Boehs"]
edition = "2021"

[dependencies]
stripper = { path="../../", features=["express"] }
patterns = { path="../patterns" }
circuit_playground_express = {version="0.11.0"}
alloc-cortex-m = "0.4.4"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

[profile.release]
debug = true

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"
