[package]
name = "patterns"
version = "0.1.0"
authors = ["Evan Boehs"]
edition = "2021"

[dependencies]
stripper = { path="../../" }
#rand = { version="0.8.5", features=["small_rng"] }
enterpolation = { version="0.2.0", features=["libm", "linear"], default-features = false }
#getrandom = { version = "0.2", features = ["js"] }
critical-section = { version = "1.1" }

[profile.release]
lto = true
