[package]
name = "wasm"
version = "0.1.0"
authors = ["Evan Boehs"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stripper = { path="../../", features=["wasm"] }
wasm-bindgen = "0.2.84"
rand = { version="0.8.5", features=["small_rng"] }
enterpolation = { version="0.2.0", features=["libm", "linear"] }
embassy-time = { version="0.1.1", features=["wasm"] }
embassy-sync = { version = "0.2.0" }
embassy-executor = { version = "0.2.0", features = ["arch-wasm", "executor-thread", "nightly", "integrated-timers"] }
getrandom = { version = "0.2", features = ["js"] }
critical-section = { version = "1.1" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'CssStyleDeclaration',
  'console',
  'Location',
  'UrlSearchParams'
]
