[package]
name = "wasm"
version = "0.1.0"
authors = ["Evan Boehs"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
patterns = { path="../patterns" }
stripper = { path="../../", features=["wasm"] }
wasm-bindgen = "0.2.84"
embassy-time = { version="0.1.1", features=["wasm"] }
embassy-sync = { version = "0.2.0" }
embassy-executor = { version = "0.2.0", features = ["arch-wasm", "executor-thread", "nightly", "integrated-timers"] }
critical-section = { version = "1.1" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'CssStyleDeclaration',
  'console',
  'Location',
  'UrlSearchParams'
]

[profile.release]
lto = true
